# vs.templ

./: .gitignore  CITATION.cff  LICENCE.md  README.md  RELEASE.md  TODO.md  index.html  meson.build  meson.options  mkdocs.yml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: 404.html  Doxyfile  calc.md  faq.md  for-developers.md  index.html  index.md  manual.md  mkdocs.yml  ordering.md  repl-vm.md  search.html  sorting.md  static-components.md  syntax.md
docs/calc/: index.html
docs/examples/: data-0.xml  template-0.xml
docs/faq/: index.html
docs/for-developers/: index.html
docs/include/: utils.hpp  vs-templ.hpp
docs/manual/: index.html
docs/releases/: v0.3.11.md  v0.3.13.md  v0.3.15.md  v0.3.5.md  v0.3.7.md  v0.3.9.md  v0.4.1.md  v0.4.3.md  v0.4.5.md  v0.4.7.md
docs/search/: search_index.json
docs/src/: vs-templ.cpp
docs/syntax/: index.html
doxygen/html/: dir_5194e5fea318fda12687127c23f8aba1.html  structvs_1_1templ_1_1log__t-members.html  structvs_1_1templ_1_1repl-members.html  utils_8hpp_source.html  vs-templ_8hpp_source.html
doxygen/latex/: vs-templ_8hpp_source.tex
examples/: data-0.xml  template-0.xml
examples/basic-features/: data.templ.xml  element.templ.xml  for-props.data.xml  for-props.templ.xml  for.data.xml  value.data.xml
examples/basics/: old.data.xml
examples/html/: template.xhtml5
include/: config.hpp  logging.hpp  meson.build  stack-lang.hpp  symbols.hpp  utils.hpp  vs-templ.hpp
latest/: index.html
latest/docs/: 404.html  index.html  meson.build  search.html
latest/doxygen/: dir_5194e5fea318fda12687127c23f8aba1_dep.map  dir_5194e5fea318fda12687127c23f8aba1_dep.md5  inherit_graph_2.map  inherit_graph_8.map  inherit_graph_9.map  inherit_graph_9.md5  stack-lang_8hpp_source.html  structvs_1_1templ_1_1concatenator.html  structvs_1_1templ_1_1log__t-members.html  structvs_1_1templ_1_1logctx__t.html  structvs_1_1templ_1_1preprocessor-members.html  structvs_1_1templ_1_1preprocessor_1_1config__t__coll__graph.md5  structvs_1_1templ_1_1symbol__coll__graph.map  structvs_1_1templ_1_1symbol__map_1_1guard__t-members.html  utils_8hpp_source.html  vs-templ_8hpp.html
master/docs/: index.html
metadata/: meson.build  metainfo.xml
next/: index.html  wasm-demo.html
next/docs/: 404.html  index.html  meson.build  meson.options  mkdocs.yml  search.html
next/docs/calc/: index.html
next/docs/examples/advanced/html/: templ.xml
next/docs/examples/basic-features/: data.ext-data.xml  element.data.xml  old.data.xml  test.templ.xml
next/docs/examples/basics/data/: data.xml
next/docs/examples/html/: page-0.xml  template.xhtml5
next/docs/faq/: index.html
next/docs/for-developers/: index.html
next/docs/include/: stack-lang.hpp  vs-templ.hpp
next/docs/manual/: index.html
next/docs/metadata/: metainfo.xml
next/docs/ordering/: index.html
next/docs/releases/v0.3.11/: index.html
next/docs/releases/v0.3.13/: index.html
next/docs/releases/v0.3.15/: index.html
next/docs/releases/v0.3.5/: index.html
next/docs/releases/v0.3.7/: index.html
next/docs/releases/v0.3.9/: index.html
next/docs/releases/v0.4.1/: index.html
next/docs/releases/v0.4.3/: index.html
next/docs/releases/v0.4.5/: index.html
next/docs/releases/v0.4.7/: index.html
next/docs/repl-vm/: index.html
next/docs/schemas/: vm.gperf
next/docs/search/: search_index.json
next/docs/sorting/: index.html
next/docs/src/: stack-lang.cpp  utils.cpp  vs-templ.cpp
next/docs/src/app/: main.cpp
next/docs/static-components/: index.html
next/docs/syntax/: index.html
next/docs/test/: main.cpp  meson.build
next/docs/test/cases/: for-props.tag.xml
next/doxygen/: annotated.html  classes.html  config_8hpp_source.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b78fdfbbb632ce54d070469d6a721373.html  dir_b78fdfbbb632ce54d070469d6a721373_dep.map  dir_b78fdfbbb632ce54d070469d6a721373_dep.md5  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_c85d3e3c5052e9ad9ce18c6863244a25_dep.map  dir_c85d3e3c5052e9ad9ce18c6863244a25_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherit_graph_9.map  inherit_graph_9.md5  inherits.html  logging_8hpp_source.html  stack-lang_8hpp_source.html  structvs_1_1templ_1_1concatenator_3_01std_1_1variant_3_01Args0_8_8_8_01_4_00_01Args1_8_8_8_01_4-members.html  structvs_1_1templ_1_1ctx__log-members.html  (+33 more)
old/: README.md  codegen.sh  test-schema.xml
schemas/: test-schema.xml  vm.gperf  vs-templ.rng  vs-tmpl.rng
scripts/: build.sh
src/: meson.build  old.cpp  stack-lang.cpp  symbols.cpp  utils.cpp  vs-templ.cpp
src/app/: main.cpp
src/cli/: main.cpp
src/lib/: stack-lang.cpp  vs-templ.cpp
subprojects/: fast_float.wrap  natsort.wrap
test/: main.cpp  meson.build
test/cases/: complex-paths.xml  for-elements.xml  for-props.tag.xml  for-range.xml  for.tag.xml  id.xml  tree-rewrite.xml  when.prop.xml
test/data/: set-0.xml
test/marginal/: eval-expr.cpp  meson.build
test/templates/: for-range.xml
v0.3.11/docs/: 404.html  index.html  meson.build
v0.3.13/docs/: 404.html  index.html  search.html
v0.3.15/: index.html
v0.3.15/docs/: index.html
v0.3.5/docs/: index.html
v0.3.7/docs/: index.html
v0.3.9/docs/: index.html  meson.build  mkdocs.yml  search.html
v0.4.1/: index.html
v0.4.1/docs/: index.html  mkdocs.yml  search.html
v0.4.1/doxygen/: annotated.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html  logging_8hpp_source.html  structvs_1_1templ_1_1concatenator_3_01std_1_1variant_3_01Args0_8_8_8_01_4_00_01Args1_8_8_8_01_4.html  (+3 more)
wasm-demo/: index.html
(+501 files in other folders)
